--- a/packages/system/server/views/layouts/default.html
+++ b/packages/system/server/views/layouts/default.html
@@ -10,7 +10,7 @@
     </section>
     {% endif %}
     <section class="content">
-        <section class="container">
+        <section class="container-fluid">
             {% block content %}{% endblock %}
         </section>
     </section>
